@@ -11,6 +11,8 @@ Post-v2.13.0
      * Deprecated DPDK ring ports (dpdkr) are no longer supported.
      * Add hardware offload support for VLAN Push/Pop actions (experimental).
      * Add hardware offload support for matching IPv6 protocol (experimental).
+     * Add hardware offload support for set of IPv6 src/dst/ttl
+       actions (experimental).
    - Linux datapath:
      * Support for kernel versions up to 5.5.x.
    - AF_XDP:
